QmlCompiler: Mark StoreElement on JS values has having side effects

A StoreElement on a JS value can do pretty much anything you can
imagine, after all.

Pick-to: 6.5 6.4 6.4.2
Fixes: QTBUG-109196
Change-Id: Ic638d94b55e6340eb9fe56abc663a6f0f2277f5e
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>