tests/auto/qml/qmlcppcodegen/data/storeElementSideEffects.qml
@@ -1,0 +1,6 @@
+import QtQml
+
+QtObject {
+    property var myItem: []
+    Component.onCompleted: myItem[0] = 10
+}
